fixtures/cs-rng-01/bad/element-access-math-random-token.ts
const Math = globalThis.Math;

export function generateToken() {
	return Math["random"]();
}
